injecao de dependencia autom e refatorando especifications
