# src/modules/cars/entities/Specification.ts
@@ -1,10 +1,20 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm"
 import { v4 as uuidV4 } from 'uuid';
 
+@Entity("specifications")
 class Specification {
+
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name: string;
+
+    @Column()
     description: string;
-    created_ad: Date;
+
+    @CreateDateColumn()
+    created_at: Date;
 
     constructor() {
         if(!this.id) {
